signature symbol issue fix on firefox

--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -53,7 +53,6 @@
   bottom: -51px;
   z-index: 9999;
   left: 74px;
-  height: 53px;
   mix-blend-mode: hard-light;
   display: flex;
 }
